@@ -1,3 +1,7 @@
+2010/07/27
+    1. Fixed esm_class for deliver_sm's.
+    2. fixed original submit date in dlr's.
+
 2010/07/25
     Changed references to smppbox to open smppbox in userguide.
 
